# BotAllu

./: .breakpoints  .gitmodules  README.md  bookclub.py  cheapshark_deals.py  dawncraft.py  ffxiv.py  flask_server.py  format.bash  main.py  new_steam_purchases.py  oilers.py  oilersscrape.py  pycord_main.py  pyproject.toml  reset-bot.txt  run_botallu.sh  steam_playtime.py  steam_purchases.py  test.bash  testff.py  unittests.py  val.py  wow.py  write_db_to_json.py
database/: channels.json  database_backup.json  database_sp_backup.json  error.txt  oilersscrape.json  prevtime.json  steampurchase.json  steampurchases.json
old/: flask_server.py  main.py  oilers.py  old_steam_purchases.py  pyproject.toml  unittests.py  val.py
