[tool.poetry]
name = "botallu"
version = "0.1.0"
description = ""
authors = ["wustangdan <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
tabulate = "^0.9.0"
beautifulsoup4 = "^4.11.1"
pytz = "^2022.7.1"
Flask = "^2.2.2"
replit = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
